--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /task2/models/__pycache__
 /task2/utils/__pycache__
 task2/data/cifar-10-python.tar.gz
+task2/model_sampling_1.pth
+task2/model_sampling_2.pth
+task2/model_sampling_1.pth
