--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ task2/data/cifar-10-python.tar.gz
 task2/model_sampling_1.pth
 task2/model_sampling_2.pth
 task2/model_sampling_1.pth
+task2/model_sampling_2.pth
